reconfiguração de subida com docker-compose no visual studio

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,3 +11,14 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+
+
+  eshopcloudnative.catalog.bootstrapper:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development  
+    ports:
+      - "80"      
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+
+
