Adicionando web api na solution

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -22,3 +22,10 @@ services:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
 
 
+
+  eshopcloudnative.catalog.webapi:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
