exxpondo postgres no host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,8 @@ services:
   postgres:
     image: postgres:14.4
     container_name: postgres
+    ports:
+      - "5432:5432"
     environment:
       {
         "POSTGRES_DB": "eshop_db",
