--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,9 @@ services:
       - 9000:9000
       - 9001:9001
     command: [ "server", "/data", "--console-address", ":9001" ]
+    environment: {
+        "MINIO_DOMAIN": "localhost"
+    }
     volumes:
       - minio_data:/data
     networks:
