--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,8 +75,6 @@ services:
       - eshop-front
       - eshop-back
 
-  ##
-
   postgres:
     image: postgres:14.4
     container_name: postgres
@@ -130,7 +128,7 @@ services:
     ports:
       - "15672:15672" #management # habilitado visualização no browser
       #- "15692:15692" #prometheus # desnecessário
-      #- "5672:5672" #amqp       # desnecessário
+      - "5672:5672" #amqp       # desnecessário
     healthcheck:
       test:
         [
