--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,28 +4,20 @@ services:
   eshopcloudnative.catalog.webui:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_URLS=http://+:80
     ports:
-      - "80"
+      - "90:80"
       - "443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
-
-  eshopcloudnative.catalog.bootstrapper:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development  
-    ports:
-      - "80"      
-    volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-
-
-
-  eshopcloudnative.catalog.webapi:
+  eshopcloudnative.catalog.primaryadapters:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
     ports:
-      - "80"
-
+      - "91:80"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
