--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,7 +118,7 @@ services:
     ports:
       - "15672:15672" #management # habilitado visualização no browser
       #- "15692:15692" #prometheus # desnecessário
-      - "5672:5672" #amqp       # desnecessário
+      - "5672:5672" #amqp
     healthcheck:
       test:
         [
