adição de grafana, loki e logstash para visão minimalista do enterprise application log. adição de profiles ao docker-compose comentando (para remover) pgadmin

--- a/launchSettings.json
+++ b/launchSettings.json
@@ -3,15 +3,10 @@
     "Docker Compose": {
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
-      "serviceActions": {
-        "api": "StartWithoutDebugging",
-        "eshopcloudnative.catalog.primaryadapters": "StartDebugging",
-        "eshopcloudnative.catalog.webui": "StartDebugging",
-        "minio": "StartWithoutDebugging",
-        "pgadmin4": "StartWithoutDebugging",
-        "postgres": "StartWithoutDebugging",
-        "rabbitmq": "StartWithoutDebugging",
-        "redis": "StartWithoutDebugging"
+      "composeProfile": {
+        "includes": [
+          "app"
+        ]
       }
     }
   }
