--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   eshopcloudnative.catalog.webui:
+    profiles: ["app", "log"]
     container_name: catalog_webui
     image: ${DOCKER_REGISTRY-}eshop-catalog-web
     build:
@@ -15,6 +16,7 @@ services:
         condition: service_started #service_completed_successfully (visual studio não suporta)
 
   eshopcloudnative.catalog.primaryadapters:
+    profiles: ["app", "log"]
     container_name: catalog_primaryadapters
     image: ${DOCKER_REGISTRY-}eshop-catalog-primaryadapters
     build:
@@ -22,7 +24,7 @@ services:
       dockerfile: eShopCloudNative.Catalog.PrimaryAdapters/Dockerfile
     networks:
       - eshop-back
-    mem_limit: 170m
+    mem_limit: 200m
     depends_on:
       postgres:
         condition: service_healthy
@@ -34,6 +36,7 @@ services:
         condition: service_started
 
   api:
+    profiles: ["app", "log"]
     container_name: kong
     image: kong:2.8.1-alpine
     volumes:
@@ -58,6 +61,7 @@ services:
         condition: service_started #service_completed_successfully (visual studio não suporta)
 
   redis:
+    profiles: ["app", "log"]
     image: redis:7.0.4
     container_name: redis-front
     networks:
@@ -65,6 +69,7 @@ services:
       - eshop-back
 
   postgres:
+    profiles: ["app", "log"]
     image: postgres:14.4
     container_name: postgres
     ports:
@@ -89,25 +94,26 @@ services:
     networks:
       - eshop-back
 
-  pgadmin4:
-    image: dpage/pgadmin4:6.12
-    container_name: pgadmin
-    hostname: pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.admin
-      PGADMIN_DEFAULT_PASSWORD: admin
-    volumes:
-      - "pgadmin_data:/var/lib/pgadmin/"
-      - "./infra/pgadmin/servers.json:/pgadmin4/servers.json"
-    ports:
-      - "82:80"
-    networks:
-      - eshop-back
-    depends_on:
-      postgres:
-        condition: service_healthy
+  # pgadmin4:
+  #   image: dpage/pgadmin4:6.12
+  #   container_name: pgadmin
+  #   hostname: pgadmin
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: admin@admin.admin
+  #     PGADMIN_DEFAULT_PASSWORD: admin
+  #   volumes:
+  #     - "pgadmin_data:/var/lib/pgadmin/"
+  #     - "./infra/pgadmin/servers.json:/pgadmin4/servers.json"
+  #   ports:
+  #     - "82:80"
+  #   networks:
+  #     - eshop-back
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
 
   rabbitmq:
+    profiles: ["app", "log"]
     container_name: rabbitmq
     hostname: rabbitmq
     build:
@@ -130,8 +136,10 @@ services:
     networks:
       - eshop-front
       - eshop-back
+      - log
 
   minio:
+    profiles: ["app", "log"]
     container_name: minio
     image: quay.io/minio/minio
     ports:
@@ -153,10 +161,101 @@ services:
       - eshop-front
       - eshop-back
 
+  logstash:
+    profiles: ["log"]
+    container_name: log_logstash
+    hostname: logstash
+    image: grafana/logstash-output-loki:2.6.1-amd64
+    environment: { "TZ": "America/Sao_Paulo" }
+    volumes:
+      - ./infra/eal/logstash/logstash.conf:/home/logstash/logstash.conf
+      - ./infra/eal/logstash/logstash.yml:/usr/share/logstash/config/logstash.yml
+    command: -f logstash.conf
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      loki:
+        condition: service_healthy
+    networks:
+      - log
+
+  loki:
+    profiles: ["log"]
+    container_name: log_loki
+    image: grafana/loki:2.6.0
+    environment: { "TZ": "America/Sao_Paulo" }
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./infra/eal/loki/:/mnt/config
+    healthcheck:
+      test: wget -q --tries=1 -O- http://127.0.0.1:3100/ready | grep -q "ready"
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    command: -config.file=/mnt/config/loki-config.yaml
+    networks:
+      - log
+
+  promtail:
+    profiles: ["log"]
+    container_name: log_promtail
+    image: grafana/promtail:2.6.0
+    environment: { "TZ": "America/Sao_Paulo" }
+    volumes:
+      - ./infra/eal/promtail/:/mnt/config
+    command: -config.file=/mnt/config/promtail-config.yaml
+    networks:
+      - log
+    depends_on:
+      loki:
+        condition: service_healthy
+
+  grafana:
+    profiles: ["log"]
+    container_name: log_grafana
+    image: grafana/grafana:latest
+    environment:
+      {
+        "TZ": "America/Sao_Paulo",
+        "GF_PATHS_PROVISIONING": "/etc/grafana/provisioning",
+        "GF_AUTH_ANONYMOUS_ENABLED": "true",
+        "GF_AUTH_ANONYMOUS_ORG_ROLE": "Admin"
+      }
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
+        apiVersion: 1
+        datasources:
+          - name: Loki
+            type: loki
+            access: proxy
+            url: http://loki:3100
+            jsonData:
+              httpHeaderName1: "X-Scope-OrgID"
+            secureJsonData:
+              httpHeaderValue1: "tenant1"
+        EOF
+        /run.sh    
+    # volumes:
+    #   - ./infra/eal/grafana/:/var/lib/grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - log
+    depends_on:
+      loki:
+        condition: service_healthy
+
 networks:
   eshop-front:
     driver: bridge
   eshop-back:
+    driver: bridge
+  log:
     driver: bridge
 
 volumes:
