--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,6 +12,16 @@ services:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
+  eshopcloudnative.catalog.bootstrap:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+      - "91:80"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+
   eshopcloudnative.catalog.primaryadapters:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
