--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -22,7 +22,7 @@ services:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
-  eshopcloudnative.catalog.primaryadapters:
+  eshopcloudnative.catalog.servicehost:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
