--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3.4'
 
+name: eshop
+
 services:
 
   ###################################################################################
@@ -11,7 +13,6 @@ services:
       dockerfile: eShopCloudNative.Catalog.WebUI/Dockerfile
     networks:
       - eshop
-    mem_limit: 150m
     depends_on:
       eshopcloudnative.catalog.bootstrap:
         condition: service_healthy
@@ -35,7 +36,6 @@ services:
       start_period: 5s    
     networks:
       - eshop
-    mem_limit: 200m
 
 
   ###################################################################################
@@ -62,7 +62,6 @@ services:
       start_period: 60s
     networks:
       - eshop
-    mem_limit: 200m
     depends_on:
       eshopcloudnative.catalog.bootstrap:
         condition: service_healthy
