--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,13 +1,28 @@
 version: '3.4'
 
 services:
+
+  identity_mock:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:12443;http://+:80
+    ports:
+      - "12080:80"
+      - "12443:12443"
+    volumes:
+      #- ${APPDATA}\Microsoft\UserSecrets:/root/.microsoft/usersecrets:ro
+      #- ${APPDATA}\ASP.NET\Https:/root/.aspnet/https:ro
+      - ./infra/idp/config:/app/config
+
   eshopcloudnative.catalog.webui:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_URLS=http://+:90;https://+:9443
+      - bearer__Authority=https://localhost1.gago.io:12443
+      - oidc__Authority=https://localhost1.gago.io:12443
     ports:
-      - "90:80"
-      - "443"
+      - "90:90"
+      - "9443:9443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
