solução para o problema de latência de 20s na primeira chamada e chamadas intermitentes

--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -5,7 +5,8 @@ services:
   api:
     profiles: [ "minimal", "log" ]
     container_name: kong
-    image: kong:3.0.0-alpine
+    build:
+      context: ./infra/api
     volumes:
       - ./infra/api/kong.yml:/kong.yml
     environment:
